--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,11 @@ isort~=6.1.0
 
 # test
 pytest~=8.4.2
+
+# segmentation
+numpy~=2.2.6
+opencv-python~~=4.12.0
+
+# models
+pydantic~=2.12.0
+pydantic_core~=2.41.1
