--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,10 @@ isort~=6.1.0
 # test
 pytest~=8.4.2
 
-# segmentation
+# config
+PyYAML~=6.0.3
+
+# preprocess
 numpy~=2.2.6
 opencv-python~=4.12.0
 
