--- a/requirements.txt
+++ b/requirements.txt
@@ -20,3 +20,13 @@ opencv-python~=4.12.0
 
 # postprocess
 Jinja2~=3.1.6
+
+# detection and dataset prep
+pandas~=2.3.3
+shapely~=2.1.2
+torch~=2.9.0
+torchvision~=0.24.0
+ultralytics~=8.3.225
+supervision~=0.27.0
+pillow==12.0.0
+tqdm==4.67.1
